@@ -1084,5 +1084,7 @@ cbpTerrOreCoal,blocks,Terrain,,,CBP Coal Deposit,,
 cbpMattressFlat,blocks,Block,,X,Mattress Flat,,
 cbpCubeHalfConfessionalOffset,blocks,Block,,X,Cube Half Confessional Offset,,
 cbpWindowStoreOneSidedFullNWL,shapes,Block,,,Window Store One Sided NWL,,
+cbpTrafficLightOffset,blocks,Terrain,,,CBP Traffic Lights Offset,,
+cbpTrafficLightOffsetDesc,blocks,Light,,,CREATIVE: Is offset and requires no power and can be turned on/off when designing prefabs, Can be rotated which the vanilla version cant.,,
 loadingCustomBlocksPack,UI,Loading Screen,x,,The Custom Block Pack contains XML definitions for custom blocks used by multiple POI developers.,,,,,,,,,,,,,
 loadingCustomBlocksPack_title,UI,Loading Screen,x,,Custom Block Pack,,,,,,,, 
