@@ -1,4 +1,4 @@
-CUSTOM BLOCKS PACK READ-ME -- VERSION A21.2.001.0046
+CUSTOM BLOCKS PACK READ-ME -- VERSION A21.2.001.0047
 
 GOAL:
 
