@@ -1,5 +1,8 @@
 CHANGE LOG / RELEASE NOTES: (Newest to Oldest)
 
+A21.2.001.0047 :
+* Added offset, rotatable traffic light.
+
 A21.2.001.0046 :
 * Added Zombie Random Helpers
 * Added cube half confessionaloffsets
